--- a/ckanext/cioos_theme/templates/package/snippets/dates.html
+++ b/ckanext/cioos_theme/templates/package/snippets/dates.html
@@ -39,7 +39,7 @@
             <tr rel="dc:relation" resource="_:extra{{ i }}">
               <th scope="row" class="dataset-label" property="rdfs:label">Metadata Date</th>
               <td class="dataset-details" property="rdf:value">
-                {{d['value']}}
+                {{value}}
               </td>
             </tr>
 
@@ -47,7 +47,7 @@
             <tr rel="dc:relation" resource="_:extra{{ i }}">
               <th scope="row" class="dataset-label" property="rdfs:label">Frequency of Update</th>
               <td class="dataset-details" property="rdf:value">
-                {{d['value']}}
+                {{value}}
               </td>
             </tr>
           {% endif %}
