add temporal extent to date block and exclude fields from additional info which have been used in other places.

--- a/ckanext/cioos_theme/templates/package/snippets/additional_info.html
+++ b/ckanext/cioos_theme/templates/package/snippets/additional_info.html
@@ -81,7 +81,9 @@
       {% block extras scoped %}
 
 
-	{% set items_to_skip = ['graphic-preview-description', 'coupled-resource', 'graphic-preview-type', 'spatial_harvester'] %}
+	{% set items_to_skip = ['graphic-preview-description', 'coupled-resource', 'graphic-preview-type', 'spatial_harvester',
+      'bbox-east-long', 'bbox-north-lat', 'bbox-south-lat', 'bbox-west-long', 'spatial', 'temporal-extent-begin' ,'temporal-extent-end'
+      'metadata-date', 'dataset-reference-date', 'frequency-of-update'] %}
 
         {% for extra in h.sorted_extras(pkg_dict.extras) %}
           {% set key, value = extra %}
