--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -33,6 +33,10 @@
     <span class="insert-comment-thread"></span>
   {% endblock %}
 
+  {% block package_access %}
+    {% snippet "package/snippets/access.html" pkg_dict=pkg.extras %}
+  {% endblock %}
+
   {% block package_resources %}
     {% snippet "package/snippets/resources_list.html", pkg=pkg, resources=pkg.resources %}
   {% endblock %}
