--- a/ckanext/cioos_theme/templates/package/snippets/dates.html
+++ b/ckanext/cioos_theme/templates/package/snippets/dates.html
@@ -39,7 +39,7 @@
             <tr rel="dc:relation" resource="_:extra{{ i }}">
               <th scope="row" class="dataset-label" property="rdfs:label">Metadata Date</th>
               <td class="dataset-details" property="rdf:value">
-                {{value}}
+                {% snippet 'snippets/local_friendly_datetime.html', datetime_obj=value %}
               </td>
             </tr>
 
@@ -55,7 +55,7 @@
             <tr rel="dc:relation" resource="_:extra{{ i }}">
               <th scope="row" class="dataset-label" property="rdfs:label">Temporal Extent Begin</th>
               <td class="dataset-details" property="rdf:value">
-                {{value}}
+                {% snippet 'snippets/local_friendly_datetime.html', datetime_obj=value %}
               </td>
             </tr>
 
@@ -63,7 +63,7 @@
               <tr rel="dc:relation" resource="_:extra{{ i }}">
                 <th scope="row" class="dataset-label" property="rdfs:label">Temporal Extent End</th>
                 <td class="dataset-details" property="rdf:value">
-                  {{value}}
+                  {% snippet 'snippets/local_friendly_datetime.html', datetime_obj=value %}
                 </td>
               </tr>
 
