add access and use section to packages

--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -34,7 +34,7 @@
   {% endblock %}
 
   {% block package_access %}
-    {% snippet "package/snippets/access.html" pkg_dict=pkg.extras %}
+    {% snippet "package/snippets/access.html", pkg_dict=pkg.extras %}
   {% endblock %}
 
   {% block package_resources %}
