update images, and metadata source info

--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -1,4 +1,4 @@
-<div role="main" class="hero">
+<div role="main" class="hero" style="overflow: hidden; background-repeat: no-repeat; background-attachment: fixed; background-position: center; background: url(../../../base/images/fish.png);">
   <div class="container">
     <div class="row row1">
       <div class="col-md-12 col1">
@@ -38,8 +38,8 @@
   <div class="container">
     <div class="row row2">
       <div class="col-md-6 col1">
-	<div class="box"> 
-	<div class="inner"> 
+	<div class="box">
+	<div class="inner">
 	  <p>Welcome to the data discovery site for the Pacific Node of the CIOOS project.</p>
 	  <p>This site aims to provide open access to a wide range of resources related to the canadian oceans.</p>
 	  <p>As most of this work is on-going, new resources will gradually be uploaded. We also welcome suggestions from external visitors on relevant datasets that could be linked to the platform at: someone (at) cioos.org.</p>
