--- a/ckanext/cioos_theme/templates/package/snippets/dates.html
+++ b/ckanext/cioos_theme/templates/package/snippets/dates.html
@@ -1,6 +1,6 @@
 <section class="dates">
   <h3>{{ _('Dates') }}</h3>
-  <table class="table table-striped table-bordered table-condensed">
+  <table class="table table-bordered table-condensed">
     <tbody>
       {% block package_dates %}
 
