--- a/ckanext/cioos_theme/templates/package/snippets/metadata_source.html
+++ b/ckanext/cioos_theme/templates/package/snippets/metadata_source.html
@@ -1,31 +1,39 @@
 <section class="metadata_source">
-  <h3>{{ _('Metadata Spurce') }}</h3>
+  <h3>{{ _('Metadata Source') }}</h3>
   <table class="table table-bordered">
     <tbody>
       {% block package_metadata_source %}
           <tr>
-            <td><img src='/base/images/{{ pkg_dict.organization.image_url }}' style="max-height:50px;"/></td>
+            <td style="width:75px;"><img src='../uploads/group/{{ pkg_dict.organization.image_url }}' style="max-height:50px;"/></td>
             <td>
-              <span> <strong>{{  pkg_dict.organization.title }} </strong> </span>
-              {% for extra in pkg_dict %}
-                {% set key, value = extra %}
-                {% if key == "harvest_url" set url = value %}
-                {% if key == "guid" set guid = value %}
-                {% if key == "harvest_title" set title = value %}
-                {% if key == "harvest_job_id" set job = value %}
-              {% endfor %}
+	      {% set url = pkg_dict.extras | selectattr("key","equalto","h_source_url") | map(attribute="value") | join('') %}
+	      {% set source_guid = pkg_dict.extras | selectattr("key","equalto","guid") | map(attribute="value") | join('') %}
+	      {% set source_guid_suffix = pkg_dict.extras | selectattr("key","equalto","guid_suffix") | map(attribute="value") | join('') %}
+	      {% set title = pkg_dict.extras | selectattr("key","equalto","h_source_title") | map(attribute="value") | join('') %}
+	      {% set source_id = pkg_dict.extras | selectattr("key","equalto","h_source_id") | map(attribute="value") | join('') %}
+	      {% set job = pkg_dict.extras | selectattr("key","equalto","h_job_id") | map(attribute="value") | join('') %}
+	      {% set harvest_object = pkg_dict.extras | selectattr("key","equalto","h_object_id") | map(attribute="value") | join('') %}
+	      {# {% set gn_view_metadata_url = pkg_dict.extras | selectattr("key","equalto","gn_view_metadata_url") | map(attribute="value") | join('') %} #}
 
-              {% if url %}
+	      {% if harvest_object %}
+	        <span style="font-weight:bold;">View Full Metadata: <a href="{{ h.url_for('harvest_object_show', id = harvest_object ) }}">xml</a> - <a href="{{ h.url_for('harvest_object_show', id = harvest_object ) }}/html">html</a> </span><br>
+	      {% else %}
+	        <span">Source information unavailable</span><br>
+	      {% endif %}
+
+              {% if url and source_guid %}
                   {% if h.is_url(url) %}
-                    <span property="foaf:homepage"> <a href="{{ url }}{{guid}}">{{ _('Source') }} from {{ title }}</a> </span>
+                    <span style="margin-left:20px;"> Harvested from </span><a href="{{ gn_view_metadata_url if gn_view_metadata_url else url.strip('/') }}/{{source_guid}}{{source_guid_suffix}}">{{ title }}</a>
                   {% else %}
-                    <span property="foaf:homepage"> {{ url }}{{ guid }} </span>
+                    <span> {{ url }}{{ guid }} </span>
                   {% endif %}
+		 </br>
               {% endif %}
-              {% if job %}
-                {% set job_url = h.url_for('harvest_object', id=job) %}
-                <span> <a href="{{ job_url }}">Download Metadata</a></span>
+              {% if source_id %}
+                <span style="margin-left:20px;"> Other records from </span><a href="{{h.url_for('harvest_read', id = source_id)}}">{{ title }}</a> </br>
               {% endif %}
+
+
             </td>
           </tr>
       {% endblock %}
