--- a/ckanext/cioos_theme/templates/package/snippets/preview.html
+++ b/ckanext/cioos_theme/templates/package/snippets/preview.html
@@ -4,7 +4,7 @@
       {% set key, value = extra %}
       {% if 'graphic-preview-file' == key %}
         <h3>{{ _('Graphic Preview') }}</h3>
-        <table class="table table-striped table-bordered table-condensed">
+        <table class="table table-bordered table-condensed">
           <tbody>
             <tr>
               <td>
