--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -46,7 +46,7 @@
   {% endblock %}
 
   {% block package_metadata_source %}
-    {% snippet "package/snippets/metadata_source.html", pkg_dict=pkg.extra %}
+    {% snippet "package/snippets/metadata_source.html", pkg_dict=pkg.extras %}
   {% endblock %}
 
   {% block package_img_preview %}
