update background on base page

--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -1,4 +1,4 @@
-<div role="main" class="hero" style="overflow: hidden; background-repeat: no-repeat; background-attachment: fixed; background-position: center; background: url(base/images/fish.png);">
+<div role="main" class="hero" style="overflow: hidden; background-repeat: no-repeat; background-attachment: fixed; background-position: center; background: url(base/images/seal.png);">
   <div class="container">
     <div class="row row1">
       <div class="col-md-12 col1">
