--- a/ckanext/cioos_theme/public/cioos_theme.css
+++ b/ckanext/cioos_theme/public/cioos_theme.css
@@ -11,3 +11,88 @@
     background-color: white;
     border-radius: 3px;
 }
+
+
+/* =====================================================
+   The "account masthead" bar across the top of the site
+   ===================================================== */
+
+.account-masthead {
+    background-color: #f9f9f9;
+    color: white;
+}
+/* The "bubble" containing the number of new notifications. */
+.account-masthead .account .notifications a span {
+  background-color: #f9f9f9;
+}
+/* The text and icons in the user account info. */
+.account-masthead .account ul li a {
+  color: rgba(0, 0, 0, 0.6);
+}
+/* The user account info text and icons, when the user's pointer is hovering
+   over them. */
+.account-masthead .account ul li a:hover {
+  color: rgba(0, 0, 0, 0.7);
+  background-color: #f9f9f9;
+}
+
+
+/* ========================================================================
+   The main masthead bar that contains the site logo, nav links, and search
+   ======================================================================== */
+.masthead {
+  background-color: #335075;
+  color: #284162;
+}
+
+/* The "navigation pills" in the masthead (the links to Datasets,
+   Organizations, etc) when the user's pointer hovers over them. */
+.masthead .navigation .nav-pills li a:hover {
+  background-color: #3e628f;
+  color: #f9f9f9;
+}
+
+/* The "active" navigation pill (for example, when you're on the /dataset page
+   the "Datasets" link is active). */
+.masthead .navigation .nav-pills li.active a {
+  background-color: #22364f;
+  color: white;
+}
+
+.masthead .navigation .nav-pills li a {
+  background-color: #335075;
+  color: white;
+}
+
+
+/* ===========================================
+   The content in the middle of the front page
+   =========================================== */
+
+/* Change the colors of the "Search Your Data" box. */
+.homepage .module-search .module-content {
+  color: rgb(68, 68, 68);
+  background-color: #f9f9f9;
+}
+/* Change the background color of the "Popular Tags" box. */
+.homepage .module-search .tags {
+  background-color: #335075;
+}
+
+/* ====================================
+   The footer at the bottom of the site
+   ==================================== */
+.site-footer,
+body {
+  background-color: #e1e4e7;
+}
+/* The text in the footer. */
+.site-footer,
+.site-footer label,
+.site-footer small {
+  color: rgba(0, 0, 0, 0.6);
+}
+/* The link texts in the footer. */
+.site-footer a {
+  color: rgba(0, 0, 0, 0.6);
+}
