--- a/ckanext/cioos_theme/templates/base.html
+++ b/ckanext/cioos_theme/templates/base.html
@@ -2,5 +2,5 @@
 
 {% block styles %}
   {{ super() }}
-  <link rel="stylesheet" href="/ckan/cioos_theme.css" />
+  <link rel="stylesheet" href="{{h.url_for_static('/cioos_theme.css')}}" />
 {% endblock %}
